--- a/gs-messaging-rabbitmq/build.gradle
+++ b/gs-messaging-rabbitmq/build.gradle
@@ -27,6 +27,8 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-amqp")
+	compile 'org.springframework.cloud:spring-cloud-spring-service-connector:1.0.0.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-cloudfoundry-connector:1.0.0.RELEASE'    
     testCompile("junit:junit")
 }
 
